{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 41,
  "lineage": "949a1836-15c3-b4a4-898d-4190cfbbc15c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-01352d1f5826fcecd",
            "default_route_table_id": "rtb-01352d1f5826fcecd",
            "id": "rtb-01352d1f5826fcecd",
            "owner_id": "939735320461",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default-user-default-route"
            },
            "tags_all": {
              "Name": "default-user-default-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-0db2bba49101c8ffd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0db2bba49101c8ffd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-user-default-sg"
            },
            "tags_all": {
              "Name": "default-user-default-sg"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047d736b35e6c3a2e",
            "domain": "vpc",
            "id": "eipalloc-047d736b35e6c3a2e",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-241-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.241.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce03722431de0592",
            "domain": "vpc",
            "id": "eipalloc-0ce03722431de0592",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-213-99.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.213.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dff1305fed57d3b9",
            "domain": "vpc",
            "id": "eipalloc-0dff1305fed57d3b9",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-130-86.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.130.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_for_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb60994bcb22cc2c",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-03642790c82a4811b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03642790c82a4811b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c7af3f5bb4db1d1",
            "private_dns": "ip-10-0-0-62.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.62",
            "public_ip": "15.165.77.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1759ea8d05fe048",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076b1bed36970fb4f",
            "tags": {
              "Name": "ami-instance"
            },
            "tags_all": {
              "Name": "ami-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d329c5ebf556935e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b121abb074cca331",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-07abc6624ab5d5f6f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07abc6624ab5d5f6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-036b60ad815920e2d",
            "private_dns": "ip-10-0-0-81.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.81",
            "public_ip": "13.125.49.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05368bcfa98deb148",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076b1bed36970fb4f",
            "tags": {
              "Name": "var.id-0"
            },
            "tags_all": {
              "Name": "var.id-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d329c5ebf556935e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b121abb074cca331",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-02502695389779a27",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02502695389779a27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0757057962d504200",
            "private_dns": "ip-10-0-1-96.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_ip": "15.165.233.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b905b8851c0b831",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031dac6df1af4c3d8",
            "tags": {
              "Name": "var.id-1"
            },
            "tags_all": {
              "Name": "var.id-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d329c5ebf556935e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b121abb074cca331",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-059cdb78d50578320",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059cdb78d50578320",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0303b09153b0b10a8",
            "private_dns": "ip-10-0-2-220.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.220",
            "public_ip": "52.78.240.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9b6d79dc59aed08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d689382696d45441",
            "tags": {
              "Name": "var.id-2"
            },
            "tags_all": {
              "Name": "var.id-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d329c5ebf556935e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:internet-gateway/igw-05a06ecc3324b5e7e",
            "id": "igw-05a06ecc3324b5e7e",
            "owner_id": "939735320461",
            "tags": {
              "Name": "default-user-igw"
            },
            "tags_all": {
              "Name": "default-user-igw"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "multi_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047d736b35e6c3a2e",
            "association_id": "eipassoc-02d410e955bfb62db",
            "connectivity_type": "public",
            "id": "nat-0f6d6ce4da6ca34bd",
            "network_interface_id": "eni-08bcbdbdce886f19d",
            "private_ip": "10.0.0.67",
            "public_ip": "3.37.241.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-076b1bed36970fb4f",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce03722431de0592",
            "association_id": "eipassoc-036880017079e47fa",
            "connectivity_type": "public",
            "id": "nat-09a8472323c9ffc7c",
            "network_interface_id": "eni-0eb9f4eb8dc1358d4",
            "private_ip": "10.0.1.110",
            "public_ip": "43.200.213.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031dac6df1af4c3d8",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dff1305fed57d3b9",
            "association_id": "eipassoc-0eaa852002c440b1f",
            "connectivity_type": "public",
            "id": "nat-0084e5eab3f7c87f3",
            "network_interface_id": "eni-0dbf423e6ce1918f2",
            "private_ip": "10.0.2.169",
            "public_ip": "43.202.130.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d689382696d45441",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2c"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-07b316164d325aed8",
            "id": "rtb-07b316164d325aed8",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f6d6ce4da6ca34bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-043cb6ed02ca99b0b",
            "id": "rtb-043cb6ed02ca99b0b",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09a8472323c9ffc7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0c1246082d51fef9c",
            "id": "rtb-0c1246082d51fef9c",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0084e5eab3f7c87f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0196e8bdb7544377f",
            "id": "rtb-0196e8bdb7544377f",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2d"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2d"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-01be31c1433f57abb",
            "id": "rtb-01be31c1433f57abb",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a06ecc3324b5e7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-route-pub"
            },
            "tags_all": {
              "Name": "default-user-route-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a03960eafa40028e",
            "route_table_id": "rtb-07b316164d325aed8",
            "subnet_id": "subnet-0e4ed4616d1a2fab5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d798d5df4b1b6a8d",
            "route_table_id": "rtb-043cb6ed02ca99b0b",
            "subnet_id": "subnet-076c1c639620238b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aef98ee8a3f5121",
            "route_table_id": "rtb-0c1246082d51fef9c",
            "subnet_id": "subnet-040dc72359c85c914"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffb322a155c0a6e1",
            "route_table_id": "rtb-0196e8bdb7544377f",
            "subnet_id": "subnet-050f091218035defc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eafe414a04d9c3f",
            "route_table_id": "rtb-01be31c1433f57abb",
            "subnet_id": "subnet-076b1bed36970fb4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69dab7ed706d3b0",
            "route_table_id": "rtb-01be31c1433f57abb",
            "subnet_id": "subnet-031dac6df1af4c3d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f35a0d32a4095f7",
            "route_table_id": "rtb-01be31c1433f57abb",
            "subnet_id": "subnet-0d689382696d45441"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b904bef831cd023",
            "route_table_id": "rtb-01be31c1433f57abb",
            "subnet_id": "subnet-0af38a69456862367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-0d329c5ebf556935e",
            "description": "security group for instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d329c5ebf556935e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "default-user-web-sg",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-user-web-sg"
            },
            "tags_all": {
              "Name": "default-user-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0e4ed4616d1a2fab5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4ed4616d1a2fab5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-1"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-1"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-076c1c639620238b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076c1c639620238b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-2"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-2"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-040dc72359c85c914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040dc72359c85c914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-3"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-3"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-050f091218035defc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f091218035defc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-4"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-4"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-076b1bed36970fb4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b1bed36970fb4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-1"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-1"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-031dac6df1af4c3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031dac6df1af4c3d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-2"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-2"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0d689382696d45441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d689382696d45441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-3"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-3"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0af38a69456862367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af38a69456862367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-4"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-4"
            },
            "vpc_id": "vpc-047aa93c1e9b62c65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:vpc/vpc-047aa93c1e9b62c65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05890af489dabac3b",
            "default_route_table_id": "rtb-01352d1f5826fcecd",
            "default_security_group_id": "sg-0db2bba49101c8ffd",
            "dhcp_options_id": "dopt-0946a0de0cb1bcec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047aa93c1e9b62c65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01352d1f5826fcecd",
            "owner_id": "939735320461",
            "tags": {
              "Name": "default-user"
            },
            "tags_all": {
              "Name": "default-user"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}